# make_gitlab_repo_server

./: README.md
backend/: .env  README.md  pyproject.toml
backend/server/: main.py
backend/server/gitlab/: gitlab.py
backend/src/backend/: main.py
frontend/: README.md  index.js  package-lock.json  package.json
frontend/public/: index.html
