[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ktakita", email = "ktakita1011@gmail.com" }
]
dependencies = [
    "flask>=3.0.3",
    "waitress>=3.0.0",
    "python-dotenv>=1.0.1",
    "flask-cors>=4.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
